# slam

./: .gitignore  Dockerfile  Ferns.h  README.md  build.sh  data_loader.py  display.py  frame.py  nvidia_icd.json  run_docker.sh  slam.py
benchmark/: benchmark.sh  history.txt
cfs/: CMakeLists.txt
cfs/Core/Utils/: RGBDOdometry.cpp
cfs/Tools/: CMakeLists.txt  main.cpp
data/: README.md
examples/: draw_camera.py  dvo_ros.py  residual_map_ros.py  ros_inputs_test.py  sample.py  sparse_odom.py
slam/: display.py  draw_camera.py  imgutils.py  pose_recovery.py  utils.py
slam/feature_extractor/: classical.py
slam/feature_extractor/classical/: methods.py
slam/feature_extractor/superpoint/: __init__.py  model.py  utils.py
slam/feature_extractor/superpoint/weights/: README.rst
slam/feature_matcher/: classical.py  utils.py
slam/feature_matcher/superglue/: model.py  utils.py
slam/math/: se3.py
slam/sensors/: __init__.py  buffer.py
slam/sensors/camera/: __init__.py  camera.py
slam/sensors/camera/inputs/: __init__.py  filestream.py  filestreamer.py  imagefilestream.py  rostopicstream.py  tumstream.py  videostream.py  videostreamer.py
slam/visualizer/: display.py
slam_dev/cpp/cfs/: CMakeLists.txt  env.sh
slam_dev/cpp/cfs/Core/: CMakeLists.txt  CoFusion.cpp
slam_dev/cpp/cfs/Core/Utils/: DeformationGraph.cpp  RGBDOdometry.cpp
slam_dev/cpp/cfs/Tools/: CMakeLists.txt  LogReader.h  main.cpp  main.h
slam_dev/cpp/cfs/Tools/exp/: CMakeLists.txt  pangolin.cpp
slam_dev/python/: data_loader.py  feature_extractor.py  slam.py  transformations.py
slam_dev/python/feature_extractor/: super_glue.py
slam_dev/python/feature_extractor/models/: utils.py
slam_dev/python/params/: config.json
src/: CMakeLists.txt  CholeskyDecomp.h  ComputePack.h  Deformation.cpp  Deformation.h  DeformationGraph.cpp  DeformationGraph.h  Display.h  FeedbackBuffer.cpp  FeedbackBuffer.h  Ferns.cpp  Ferns.h  FillIn.cpp  FillIn.h  Fillin.cpp  FindRealSense2.cmake  Findcv_bridge_1_13.cmake  GPUConfig.h  GPUTexture.cpp  GlobalModel.cpp  GlobalModel.h  GroundTruthOdometry.cpp  GroundTruthOdometry.h  IndexMap.cpp  IndexMap.h  Intrinsics.h  RGBDOdometry.cpp  RGBDOdometry.h  RawLogReader.cpp  RawLogReader.h  Render.h  Resize.h  Resolution.h  Stopwatch.h  main_cuda_disable_mb.cpp  main_cuda_gpe.cpp  main_cuda_klg.cpp.x  main_cuda_realsense.cpp  main_cuda_splat_fix.cpp  main_ef_gl.cpp  (+4 more)
src/apps/: elastic_fusion.cpp  elastic_fusion_file.cpp  elastic_fusion_realsense.cpp  elastic_fusion_ros.cpp  model_exp.cpp  optical_flow.cpp
src/configs/: ef.cfg  ef_file.cfg  ef_iclnuim.cfg  ef_rs.cfg  ef_subt.cfg
src/cuda/: cudafuncs.cu  cudafuncs.cuh  operators.cuh  reduce.cu  types.cuh  utils.cu  utils.cuh  vertex_ops.cu  vertex_ops.cuh
src/gl/: ComputePack.cpp  ComputePack.h  FeedbackBuffer.cpp  FeedbackBuffer.h  FillIn.cpp  FillIn.h  Img.h  Resize.cpp  Resize.h  Shaders.h  Vertex.h  types.cpp  types.h
src/inputs/: FileReader.cpp  FileReader.h  FrameData.h  KlgLogReader.cpp  KlgLogReader.h  LogReader.h  Macros.h  RawLogReader.h
src/inputs/ros/: DepthSubscriber.cpp  DepthSubscriber.h  IMUSubscriber.cpp  IMUSubscriber.h  PoseSubscriber.cpp  PoseSubscriber.h  RGBSubscriber.cpp  RGBSubscriber.h
src/inputs/utils/: ImgStats.h
src/lc/: Deformation.cpp  Deformation.h  DeformationGraph.cpp  DeformationGraph.h  Ferns.cpp  Ferns.h
src/model/: GlobalModel.cpp  GlobalModel.h  IndexMap.cpp  IndexMap.h  Model.cpp  Model.h  ModelGL.cpp  ModelGL.h
src/model/shaders/: copy_unstable.vert
src/odom/: RGBDOdometryef.cpp  RGBDOdometryef.h  reduce.cu  utils.cu  utils.cuh  utils.h
src/of/: utils.cu  utils.cuh
src/segmentation/: Segmentation.cpp  Segmentation.h  Yolact.cpp  Yolact.h  utils.cu  utils.h
src/sensors/: Camera.h
src/sf/: ROSInputSubscriberSF.cpp  ROSInputSubscriberSF.h  ekf.h
src/sf/ekf/: PoseMeasurementModel.h  SystemModel.h
src/shaders/: Resize.h  Shaders.h  draw.frag  draw_global_surface_.frag  test.frag  test.geom  test.vert  vertex.vert  warper.vert
src/tracking/: HungarianAlg.cpp  Kalman.cpp  Kalman.h  Tracker.cpp  Tracker.h  multitracker.h
src/ui/: EFGUI.cpp  EFGUI.h  GUI.h
src/ui/shaders/: draw_bbox.frag  draw_bbox.vert  draw_cam.frag  draw_cam.vert  draw_global_surface_.vert  draw_mask.frag  draw_model.vert
surfelmeshing/: CMakeLists.txt
surfelmeshing/ElasticFusion/: .directory  build.sh
surfelmeshing/ElasticFusion/GUI/src/Tools/: RealSenseInterface.cpp
surfelmeshing/applications/surfel_meshing/: .directory  CMakeLists.txt
surfelmeshing/applications/surfel_meshing/src/Tools/: LiveLogReader.cpp  LiveLogReader.h  LogReader.h  RealSenseInterface.cpp
surfelmeshing/applications/surfel_meshing/src/surfel_meshing/: main.cc
surfelmeshing/cmake/: FindRealSense.cmake  Findefusion.cmake
surfelmeshing/rgbd_dataset_freiburg1_floor/: .directory  poses1.txt  traj1.txt
